--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -140,39 +140,64 @@ td {
 	}
 }
 
-.img-style {
-	width: 100%;
-	display: flex;
-	justify-content: center;
 
-	.img-item {
-		width: 50%;
+
+
+.modal-desc-home-page {
+	.ant-modal-title {
+		margin: 0;
+		color: rgba(0, 0, 0, 0.88);
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 1.5;
+		overflow: hidden;
+		-webkit-line-clamp: 2;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+	}
+
+	.img-style {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+
+		.img-item {
+			width: 50%;
+		}
+	}
+
+	.image {
+		display: block;
+		margin-block-start: 0em;
+		margin-block-end: 0em;
+		margin-inline-start: 5px;
+		margin-inline-end: 5px;
+	}
+
+
+	p {
+		display: block;
+		margin-block-start: 0;
+		margin-block-end: 0;
+		margin-inline-start: 5px;
+		margin-inline-end: 5px;
+	}
+
+	.p-padding {
+		display: block;
+		margin-block-start: 0;
+		margin-block-end: 0;
+		margin-inline-start: 5px;
+		margin-inline-end: 5px;
+		margin: 5px;
 	}
 }
 
-.image {
-	display: block;
-	margin-block-start: 0em;
-	margin-block-end: 0em;
-	margin-inline-start: 5px;
-	margin-inline-end: 5px;
+
+.layout-map-edit {
+	border: 1px solid var(--icon-color);
+	padding: 0;
+	min-height: calc(100vh - 489px) !important;
+	margin: 0;
+	border-radius: 3px;
 }
-
-
-p {
-	display: block;
-	margin-block-start: 0;
-	margin-block-end: 0;
-	margin-inline-start: 5px;
-	margin-inline-end: 5px;
-}
-
-.p-padding {
-	display: block;
-	margin-block-start: 0;
-	margin-block-end: 0;
-	margin-inline-start: 5px;
-	margin-inline-end: 5px;
-	margin: 5px;
-}
-
