--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -41,9 +41,15 @@
 		}
 
 		.services-b {
-			padding: 0px 0px 0px 5px;
+			padding: 0 0 0 5px;
 			display: flex;
 			flex-direction: column;
+			text-decoration: none;
+
+			a {
+				text-decoration: none;
+				color: #fff;
+			}
 		}
 	}
 
@@ -54,7 +60,7 @@
 		flex-wrap: nowrap;
 
 		.info-a {
-			margin: 0px 64px 0 0;
+			margin: 0 64px 0 0;
 		}
 
 		.info-b {
@@ -89,7 +95,7 @@
 	.ant-divider {
 		background-color: #fff;
 		padding: 0;
-		margin: 10px 0px;
+		margin: 10px 0;
 	}
 
 	.uriit-footer-name {
