--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -20,10 +20,34 @@
 			flex-direction: column;
 			padding: 0;
 			height: calc(100%);
-			padding: 24px 0 0px 0;
+			padding: 24px 0 0 0;
+			background: #e9e9e91a;
 
 			.search-block {
 				max-width: 500px;
+
+				.home-page-map-filter-dropdown {
+					.ant-select-item {
+						padding: 2px !important;
+					}
+
+					.ant-select-dropdown .ant-select-item-option-content {
+						display: flex;
+						align-items: center;
+					}
+
+
+					.title {
+						margin: 0;
+						padding: 0 4px;
+
+						text-overflow: ellipsis;
+						overflow: hidden;
+						max-width: 470px;
+						white-space: nowrap;
+
+					}
+				}
 
 				.ant-input-affix-wrapper {
 					border-bottom-width: 1px !important;
@@ -31,18 +55,19 @@
 					border-color: #2A388C;
 					border-style: none;
 					border-radius: 0;
+					background: transparent;
 				}
 
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper .ant-input-prefix {
+				.ant-input-affix-wrapper .ant-input-prefix {
 					margin-inline-end: 10px;
 				}
 
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
+				.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
 					border-color: #ffffff00;
 					z-index: 1;
 				}
 
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper:hover {
+				.ant-input-affix-wrapper:hover {
 					border-right-color: #ffffff00 !important;
 					border-left-color: #ffffff00 !important;
 					border-top-color: #ffffff00 !important;
@@ -50,8 +75,8 @@
 				}
 
 
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper:focus,
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper-focused {
+				.ant-input-affix-wrapper:focus,
+				.ant-input-affix-wrapper-focused {
 					border-right-color: #ffffff00 !important;
 					border-left-color: #ffffff00 !important;
 					border-top-color: #ffffff00 !important;
@@ -60,7 +85,7 @@
 					outline: 0;
 				}
 
-				:where(.css-dev-only-do-not-override-1eo065b).ant-input-affix-wrapper {
+				.ant-input-affix-wrapper {
 					border-bottom-color: #2a388c;
 					border-radius: 0;
 					border-right-color: #ffffff00;
@@ -70,47 +95,250 @@
 			}
 
 			.menu-maps {
-				margin-top: 24px;
+				margin: 24px 0;
 				display: flex;
 
 				.menu-list {
 					max-width: 300px;
+					min-height: 500px;
+					padding: 3px;
+
+					.dnd-container-menu {
+						display: flex;
+						flex-direction: column;
+						margin-top: 16px;
+						max-width: 300px;
+
+						.menu-group {
+							display: flex;
+							flex-direction: column;
+							box-sizing: border-box;
+							margin-top: 5px;
+
+							.menu-item {
+								border-bottom: var(--divider-color) 1px solid;
+								width: 300px;
+								display: flex;
+								justify-content: center;
+								box-sizing: border-box;
+
+								.menu-content {
+									border: #00000000 solid 1px;
+									display: inline-flex;
+									align-items: center;
+									box-sizing: border-box;
+									margin: 5px 0;
+									border-radius: 4px;
+
+									.menu-item-content {
+										overflow: hidden;
+										white-space: initial;
+										text-overflow: ellipsis;
+										text-align: left;
+										letter-spacing: normal;
+										-webkit-line-clamp: 1;
+										display: -webkit-box;
+										-webkit-box-orient: vertical;
+										box-sizing: border-box;
+										border-radius: 4px;
+										padding: 5px;
+									}
+								}
+							}
+						}
+					}
 				}
 
 				.content-maps-grid {
-					text-align: center;
-					color: #000;
-					background-color: #ffffff00;
-					padding: 0px;
 					width: 100%;
+					padding: 3px;
+
+					.dnd-container-maps {
+						display: flex;
+						flex-direction: column;
+						margin-top: 16px;
+						width: 100%;
+
+						.maps-group {
+							display: grid;
+							justify-items: center;
+							margin-top: 5px;
+							gap: 50px;
+
+							.drag-item {
+								box-sizing: border-box;
+								border-radius: 4px;
+								background: var(--divider-color);
+								padding: 5px;
+								overflow: auto;
+								height: 100%;
+							}
+
+							.maps-item {
+								display: inline-flex;
+								align-items: center;
+								box-sizing: border-box;
+								border: 1px solid var(--icon-color);
+								border-radius: 4px;
+
+								.ant-card {
+									height: 100%;
+									display: flex;
+									flex-direction: column;
+									justify-content: space-between;
+
+									.ant-card-cover {
+										height: 100%;
+
+										.link-map {
+											height: 100%;
+
+											.empty-block {
+												display: flex;
+												flex-direction: column;
+												justify-content: center;
+												height: 100%;
+												border-bottom: 1px solid var(--icon-color);
+											}
+										}
+									}
+								}
+
+								.img_preview {
+									height: inherit;
+									margin: 0;
+									object-fit: contain;
+									padding: 0;
+									border-top-right-radius: 4px;
+									border-top-left-radius: 4px;
+									border: 1px solid var(--icon-color);
+									box-sizing: border-box;
+								}
+
+								.img_preview_none {
+									height: 168px;
+								}
+
+								.meta-card {
+									overflow: hidden;
+									display: flex;
+									flex: 1;
+									flex-direction: column;
+									justify-content: space-around;
+
+									.ant-card-meta-detail {
+										overflow: hidden;
+										display: flex;
+										flex: 1;
+										flex-direction: column;
+										justify-content: space-around;
+
+										.ant-card-meta-title {
+											height: 100%;
+											display: flex;
+											align-items: center;
+											margin: 8px 0 0 0;
+											cursor: text;
+
+											.grid-card-meta-title {
+												margin: 5px 16px;
+												color: #000000;
+												font-weight: 400;
+												font-size: 16px;
+												overflow: hidden;
+												white-space: initial;
+												text-overflow: ellipsis;
+												line-height: 20.7px;
+												text-align: left;
+												letter-spacing: normal;
+												-webkit-line-clamp: 3;
+												display: -webkit-box;
+												-webkit-box-orient: vertical;
+											}
+										}
+
+										.ant-card-meta-description {
+											margin: 0 0 10px 0;
+											display: flex;
+											align-items: center;
+											justify-content: space-between;
+											cursor: text;
+
+											.icon-open-map {
+												margin: 0 0 0 10px;
+												color: #2a388c;
+												border: 1px solid #2a388c;
+												padding: 0;
+												border-radius: 2px;
+												line-height: 1;
+											}
+
+											.icon-info-map {
+												line-height: 1;
+												font-size: 24px;
+												padding: 0 10px 0 0;
+												cursor: pointer;
+
+												svg {
+													color: #b5bcc7;
+												}
+											}
+
+											a {
+												color: #2a388c;
+												display: flex;
+												align-items: center;
+												font-size: 24px;
+												padding: 5px 16px;
+											}
+
+											.open-map {
+												color: #2a388c;
+												text-transform: uppercase;
+											}
+
+											svg {
+												color: #2a388c;
+											}
+										}
+									}
+
+									.ant-modal .ant-modal-content {
+										position: relative;
+										background-color: #ffffff;
+										background-clip: padding-box;
+										border: 0;
+										border-radius: 3px;
+										box-shadow: none;
+										pointer-events: auto;
+										padding: 5px;
+									}
+
+									.ant-modal .ant-modal-title {
+										margin: 5px 32px 5px 5px;
+										color: #000000;
+										font-weight: 400;
+										font-size: 16px;
+										overflow: hidden;
+										white-space: initial;
+										text-overflow: ellipsis;
+										line-height: 20.7px;
+										text-align: left;
+										letter-spacing: normal;
+										-webkit-line-clamp: 1;
+										display: -webkit-box;
+										-webkit-box-orient: vertical;
+									}
+								}
+							}
+						}
+					}
 				}
 			}
 		}
 	}
 }
 
-.home-page-map-filter-dropdown {
-	.ant-select-item {
-		padding: 2px !important;
-	}
-
-	.ant-select-dropdown .ant-select-item-option-content {
-		display: flex;
-		align-items: center;
-	}
-
-
-	.title {
-		margin: 0;
-		padding: 0 4px;
-
-		text-overflow: ellipsis;
-		overflow: hidden;
-		max-width: 470px;
-		white-space: nowrap;
-
-	}
-}
 
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
