--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -128,7 +128,7 @@
 									align-items: center;
 									box-sizing: border-box;
 									margin: 5px 0;
-									border-radius: 4px;
+									border-radius: 3px;
 
 									.menu-item-content {
 										overflow: hidden;
@@ -140,7 +140,7 @@
 										display: -webkit-box;
 										-webkit-box-orient: vertical;
 										box-sizing: border-box;
-										border-radius: 4px;
+										border-radius: 3px;
 										padding: 5px;
 									}
 								}
@@ -167,7 +167,7 @@
 
 							.drag-item {
 								box-sizing: border-box;
-								border-radius: 4px;
+								border-radius: 3px;
 								padding: 5px;
 								height: 100%;
 								background: #b3b9be14;
@@ -197,8 +197,8 @@
 								display: inline-flex;
 								align-items: center;
 								box-sizing: border-box;
-								border: 1px solid var(--icon-color);
-								border-radius: 4px;
+								border: 1px solid #b3b9be78;
+								border-radius: 3px;
 
 								.ant-card {
 									height: 100%;
@@ -217,7 +217,7 @@
 												flex-direction: column;
 												justify-content: center;
 												height: 100%;
-												border-bottom: 1px solid var(--icon-color);
+												border-bottom: 1px solid #b3b9be78;
 											}
 										}
 									}
@@ -228,9 +228,9 @@
 									margin: 0;
 									object-fit: contain;
 									padding: 0;
-									border-top-right-radius: 4px;
-									border-top-left-radius: 4px;
-									border: 1px solid var(--icon-color);
+									border-top-right-radius: 3px;
+									border-top-left-radius: 3px;
+									border: 1px solid #b3b9be78;
 									box-sizing: border-box;
 								}
 
@@ -438,13 +438,4 @@ td {
 		margin-inline-end: 5px;
 		margin: 5px;
 	}
-}
-
-
-.layout-map-edit {
-	border: 1px solid var(--icon-color);
-	padding: 0;
-	min-height: calc(100vh - 489px) !important;
-	margin: 0;
-	border-radius: 3px;
 }
