--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -100,7 +100,7 @@
 
 				.menu-list {
 					max-width: 300px;
-					min-height: 500px;
+					min-height: 350px;
 					padding: 3px;
 
 					.dnd-container-menu {
@@ -163,7 +163,7 @@
 							display: grid;
 							justify-items: center;
 							margin-top: 5px;
-							gap: 50px;
+							gap: 50px 4px;
 
 							.drag-item {
 								box-sizing: border-box;
@@ -171,6 +171,7 @@
 								padding: 5px;
 								height: 100%;
 								background: #b3b9be14;
+								box-shadow: 0 0 3px 0;
 
 								.content-drag {
 									margin: 0;
@@ -205,7 +206,7 @@
 									display: flex;
 									flex-direction: column;
 									justify-content: space-between;
-
+									border-radius: 3px;
 									.ant-card-cover {
 										height: 100%;
 
