table desc style

--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -92,6 +92,15 @@
         margin: 5px;
     }
 
+    table {
+        width: 100%;
+    }
+
+    td {
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+
     table,
     tbody,
     tr,
