--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -373,6 +373,15 @@ figure {
 	margin: 5px;
 }
 
+table {
+	width: 100%;
+}
+
+td {
+	word-wrap: break-word;
+	word-break: break-all;
+}
+
 table,
 tbody,
 tr,
@@ -387,7 +396,6 @@ td {
 		padding: 0 5px 0 5px;
 	}
 }
-
 
 
 
