--- a/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
+++ b/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
@@ -34,6 +34,15 @@
         margin: 5px;
     }
 
+    table {
+        width: 100%;
+    }
+
+    td {
+        word-wrap: break-word;
+        word-break: break-all;
+    }
+
     table,
     tbody,
     tr,
