Correction of description style

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -374,12 +374,12 @@ figure {
 }
 
 table {
-	width: 100%;
+    min-width: 340px;
+    margin: auto;
 }
 
 td {
-	word-wrap: break-word;
-	word-break: break-all;
+    word-break: break-word;
 }
 
 table,
@@ -400,6 +400,8 @@ td {
 
 
 .modal-desc-home-page {
+	min-width: 50%;
+	max-width: 75%;
 	.ant-modal-title {
 		margin: 0;
 		color: rgba(0, 0, 0, 0.88);
