--- a/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
+++ b/nextgisweb/webmap/nodepkg/map-desc/MapDesc.less
@@ -35,14 +35,14 @@
     }
 
     table {
-        width: 100%;
+        min-width: 340px;
+        margin: auto;
     }
 
     td {
-        word-wrap: break-word;
-        word-break: break-all;
+        word-break: break-word;
     }
-
+    
     table,
     tbody,
     tr,
