--- a/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/description/DescriptionPanel.less
@@ -93,12 +93,12 @@
     }
 
     table {
-        width: 100%;
+        min-width: 340px;
+        margin: auto;
     }
 
     td {
-        word-wrap: break-word;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     table,
