testing and refining the description

--- a/nextgisweb/resource/nodepkg/children-section/ChildrenSection.less
+++ b/nextgisweb/resource/nodepkg/children-section/ChildrenSection.less
@@ -28,6 +28,15 @@
             }
         }
 
+        .name-style {
+            text-decoration: none;
+            overflow-wrap: anywhere;
+            overflow: hidden;
+            -webkit-line-clamp: 2;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+        }
+
         .actions,
         .volume {
             text-align: right !important;
