--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -207,6 +207,7 @@
 									flex-direction: column;
 									justify-content: space-between;
 									border-radius: 3px;
+
 									.ant-card-cover {
 										height: 100%;
 
@@ -322,33 +323,6 @@
 											}
 										}
 									}
-
-									.ant-modal .ant-modal-content {
-										position: relative;
-										background-color: #ffffff;
-										background-clip: padding-box;
-										border: 0;
-										border-radius: 3px;
-										box-shadow: none;
-										pointer-events: auto;
-										padding: 5px;
-									}
-
-									.ant-modal .ant-modal-title {
-										margin: 5px 32px 5px 5px;
-										color: #000000;
-										font-weight: 400;
-										font-size: 16px;
-										overflow: hidden;
-										white-space: initial;
-										text-overflow: ellipsis;
-										line-height: 20.7px;
-										text-align: left;
-										letter-spacing: normal;
-										-webkit-line-clamp: 1;
-										display: -webkit-box;
-										-webkit-box-orient: vertical;
-									}
 								}
 							}
 						}
@@ -365,88 +339,37 @@ textarea::-webkit-input-placeholder {
 	color: #2a398ca6 !important;
 }
 
-.label-delete-link {
-	color: var(--text-secondary);
-}
-
-figure {
-	margin: 5px;
-}
-
-table {
-    min-width: 340px;
-    margin: auto;
-}
-
-td {
-    word-break: break-word;
-}
-
-table,
-tbody,
-tr,
-td {
-	border: 0.005em solid var(--divider-color);
-	border-collapse: collapse;
-	text-align: center;
-
-	tr,
-	td {
-		border-spacing: 0;
-		padding: 0 5px 0 5px;
-	}
-}
-
-
-
 .modal-desc-home-page {
-	min-width: 50%;
+	min-width: 500px;
 	max-width: 75%;
+
+	.ant-modal-close {
+		position: absolute;
+		margin: 0px;
+		top: 0px;
+		right: 0px;
+		z-index: 1010;
+		padding: 0;
+		color: #2a388c;
+		line-height: 1;
+		width: 32px;
+		height: 32px;
+		border-radius: 4px;
+		transition: color 0s, background-color 0s;
+	}
+
 	.ant-modal-title {
-		margin: 0;
-		color: rgba(0, 0, 0, 0.88);
-		font-weight: 500;
-		font-size: 18px;
-		line-height: 1.5;
+		margin: auto;
+		color: #2a388c;
+		font-size: 15px;
+		line-height: 1.4;
 		overflow: hidden;
 		-webkit-line-clamp: 2;
 		display: -webkit-box;
 		-webkit-box-orient: vertical;
-	}
-
-	.img-style {
-		width: 100%;
-		display: flex;
-		justify-content: center;
-
-		.img-item {
-			width: 50%;
-		}
-	}
-
-	.image {
-		display: block;
-		margin-block-start: 0em;
-		margin-block-end: 0em;
-		margin-inline-start: 5px;
-		margin-inline-end: 5px;
-	}
-
-
-	p {
-		display: block;
-		margin-block-start: 0;
-		margin-block-end: 0;
-		margin-inline-start: 5px;
-		margin-inline-end: 5px;
-	}
-
-	.p-padding {
-		display: block;
-		margin-block-start: 0;
-		margin-block-end: 0;
-		margin-inline-start: 5px;
-		margin-inline-end: 5px;
-		margin: 5px;
+		text-transform: uppercase;
+		font-weight: 500;
+		max-width: 500px;
+		text-align: center;
 	}
 }
