--- a/nextgisweb/webmap/nodepkg/feature-link/FeatureLink.less
+++ b/nextgisweb/webmap/nodepkg/feature-link/FeatureLink.less
@@ -5,7 +5,7 @@
     align-items: center;
 
     .ant-btn-icon {
-        margin-inline-end: 0 !important;
+        margin: auto;
     }
 
     button {
