testing and refining the description

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -11,15 +11,18 @@
 		overflow: auto;
 		max-height: calc(50vh);
 		margin: 5px auto;
+	}
+
+	table {
 		min-width: 340px;
-		border: 1px solid var(--divider-color);
+		margin: auto;
 	}
 
 	table,
 	tbody,
 	tr,
 	td {
-		
+		border: 1px solid var(--divider-color);
 		border-collapse: collapse;
 		text-align: center;
 		box-sizing: border-box;
@@ -29,17 +32,6 @@
 			border-spacing: 0;
 			padding: 0 5px 0 5px;
 		}
-	}
-
-	table {
-		border-collapse: collapse;
-		border: 2px solid white;
-	}
-
-	td,
-	th {
-		padding: 3px;
-		border: 1px solid var(--divider-color);
 	}
 
 	.img-style {
