--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -113,6 +113,12 @@ a[class*=" icon-"]:hover:before {
                         >a {
                             color: inherit;
                             text-decoration: none;
+                            min-height: 32px;
+                            overflow-wrap: anywhere;
+                            overflow: hidden;
+                            -webkit-line-clamp: 2;
+                            display: -webkit-box;
+                            -webkit-box-orient: vertical;
 
                             &:hover {
                                 color: var(--link-hover-color);
@@ -132,6 +138,7 @@ a[class*=" icon-"]:hover:before {
                     -webkit-line-clamp: 2;
                     display: -webkit-box;
                     -webkit-box-orient: vertical;
+                    font-size: 18px;
                 }
             }
         }
@@ -182,17 +189,19 @@ a[class*=" icon-"]:hover:before {
     >div.panel-text {
         display: flex;
         align-items: center;
+
         >a {
             display: flex;
             flex-shrink: 1;
             justify-content: center;
             box-sizing: content-box;
             min-width: 40px;
-    
+
             >img {
                 display: block;
             }
         }
+
         >div.text {
             color: var(--primary);
             flex-grow: 1;
