Setting the visibility of attached files in the map layer tree

--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -113,6 +113,11 @@
                             style="width: 100%"
                             title="{{gettext 'Style resource'}}">
                         </div>
+
+                        <div data-dojo-attach-point="wdgtFileResourseVisible"
+                            data-dojo-type="dijit/form/CheckBox"
+                            title="{{gettext 'FileResourseVisible'}}">
+                        </div>
                     </div>
                 </div>
 
