--- a/nextgisweb/static/css/layout.less
+++ b/nextgisweb/static/css/layout.less
@@ -113,12 +113,7 @@ a[class*=" icon-"]:hover:before {
                         >a {
                             color: inherit;
                             text-decoration: none;
-                            min-height: 32px;
-                            overflow-wrap: anywhere;
-                            overflow: hidden;
-                            -webkit-line-clamp: 2;
-                            display: -webkit-box;
-                            -webkit-box-orient: vertical;
+                            max-width: 350px;
 
                             &:hover {
                                 color: var(--link-hover-color);
