--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -114,9 +114,9 @@
                             title="{{gettext 'Style resource'}}">
                         </div>
 
-                        <div data-dojo-attach-point="wdgtFileResourseVisible"
+                        <div data-dojo-attach-point="wdgtFileResourceVisible"
                             data-dojo-type="dijit/form/CheckBox"
-                            title="{{gettext 'FileResourseVisible'}}">
+                            title="{{gettext 'FileResourceVisible'}}">
                         </div>
                     </div>
                 </div>
