Testing a React app for a widget, fixing bugs and removing unused code

--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -118,6 +118,11 @@
                             data-dojo-type="dijit/form/CheckBox"
                             title="{{gettext 'FileResourceVisible'}}">
                         </div>
+
+                        <div data-dojo-attach-point="wdgtLayerFile"
+                            data-dojo-type="dijit/layout/BorderContainer"
+                            title="{{gettext 'Layer file'}}">
+                        </div>
                     </div>
                 </div>
 
