--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -41,7 +41,7 @@
             style="width: 70%; margin-right: 5px; margin-bottom: 5px;">
 
             <div data-dojo-attach-point="widgetProperties" data-dojo-type="dijit/layout/StackContainer"
-                data-dojo-props="doLayout: false" style="width: 100%;">
+                data-dojo-props="doLayout: false" style="width: 100%; height: auto; overflow: auto;">
 
                 <div data-dojo-type="dijit/layout/ContentPane"></div>
 
