show/hide layer files in web map layer tree

--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -85,12 +85,8 @@
                         <div data-dojo-attach-point="wLayerStyle" data-dojo-type="ngw-resource/form/ResourceLink"
                             style="width: 100%" title="{{gettext 'Style resource'}}">
                         </div>
-
-                        <div data-dojo-attach-point="wdgtFileResourceVisible" data-dojo-type="dijit/form/CheckBox"
-                            title="{{gettext 'FileResourceVisible'}}">
-                        </div>
                     </div>
-                    <div data-dojo-attach-point="wdgtResourceFile" data-dojo-type="dijit/layout/ContentPane"></div>
+                    <div data-dojo-attach-point="wdgtResourceFile" data-dojo-type="dijit/layout/ContentPane" style="padding: 0px"></div>
                 </div>
 
                 <div data-dojo-attach-point="paneGroup" data-dojo-type="dijit/layout/ContentPane" style="padding: 0">
