refinement of layer file display styles

--- a/nextgisweb/webmap/amd/ngw-webmap/template/resources/ItemWidget.css
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/resources/ItemWidget.css
@@ -34,3 +34,9 @@
 .layer-order__grid .dgrid-cell-padding {
     padding: 3px 8px;
 }
+
+.dijitHidden {
+    position: absolute;
+    visibility: hidden;
+    display: none;
+}
