component for description

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,8 +1,6 @@
 .desc-component {
 	overflow: auto;
 
-
-
 	figure {
 		margin: 5px;
 	}
@@ -68,8 +66,9 @@
 		color: var(--text-secondary);
 	}
 
-
-
+	.loading {
+		color: gray;
+	}
 
 	.image {
 		display: block;
@@ -78,7 +77,4 @@
 		margin-inline-start: 5px;
 		margin-inline-end: 5px;
 	}
-
-
-
 }
