--- a/nextgisweb/webmap/nodepkg/navigation-menu/NavigationMenu.less
+++ b/nextgisweb/webmap/nodepkg/navigation-menu/NavigationMenu.less
@@ -49,6 +49,16 @@
     .iconLinks {
         color: #87b4c7;
         font-size: 20px;
+        width: 20px;
+        height: 20px;
+    }
+
+    svg.icon {
+        fill: #87b4c7;
+    }
+
+    svg.icon:hover {
+        fill: rgb(255, 255, 255);
     }
 
     .iconLinks:hover {
