test identify module, change style

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -340,9 +340,15 @@
         }
     }
 
-    .link-copy {
+    .link-value {
+        padding: 0;
+        cursor: pointer;
         display: flex;
         align-items: center;
+        line-height: normal;
+        height: 24px;
+        width: 24px;
+        justify-content: center;
     }
 }
 
