test select options popup

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -221,7 +221,7 @@
                     height: auto;
 
                     .icon-style {
-                        vertical-align: middle;
+                        // vertical-align: middle;
                     }
                 }
             }
@@ -422,9 +422,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        font-weight: normal;
         text-align: right;
-        color: var(--text-secondary);
     }
 }
 
