the styles of the popup identification window buttons have been configured

--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -349,6 +349,10 @@
         height: 24px;
         width: 24px;
         justify-content: center;
+
+        &:hover {
+            color: var(--primary);
+        }
     }
 }
 
