--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -24,7 +24,8 @@
                 data-dojo-props="iconClass: 'dijitEditorIcon dijitEditorIconDelete'" disabled="disabled">
                 {{gettext 'Remove'}}
             </div>
-
+            <div data-dojo-attach-point="wdgtLayerOrder" data-dojo-type="dijit/layout/ContentPane" style="float:right; padding: 0px; margin: 0 5px;">
+            </div>
             <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnLayerOrder"
                 data-dojo-props="iconClass: 'dijitEditorIcon dijitEditorIconSelectAll'" style="float:right"
                 class="dijitButton--signal">
