--- a/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
+++ b/nextgisweb/webmap/amd/ngw-webmap/template/ItemWidget.hbs
@@ -24,11 +24,11 @@
                 data-dojo-props="iconClass: 'dijitEditorIcon dijitEditorIconDelete'" disabled="disabled">
                 {{gettext 'Remove'}}
             </div>
-            {{!-- <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnLayerOrder"
+            <div data-dojo-type="dijit/form/Button" data-dojo-attach-point="btnLayerOrder"
                 data-dojo-props="iconClass: 'dijitEditorIcon dijitEditorIconSelectAll'" style="float:right"
                 class="dijitButton--signal">
                 {{gettext 'Layer order'}}
-            </div> --}}
+            </div>
         </div>
 
         <div data-dojo-attach-point="containerTree" data-dojo-type="dijit/layout/ContentPane"
