error correction identify module, translations, style

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -82,4 +82,23 @@
 	a {
 		text-decoration: none;
 	}
+
+	.item-description {
+		.title-desc {
+			margin: 5px;
+			display: block;
+			font-weight: 500;
+
+			.desc-link {
+				.label-desc {
+					padding: 0 5px;
+				}
+			}
+
+			.label-desc-no {
+				padding: 0 5px;
+			}
+		}
+	}
+
 }
