--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -165,6 +165,14 @@
         }
     }
 
+    .select-feature-forbidden {
+        padding: 2px 0 0 0;
+        width: 100%;
+        display: inline-flex;
+        position: absolute;
+        top: 22px;
+    }
+
     .select-feature {
         padding: 2px 0 0 0;
         width: 100%;
