--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -158,7 +158,7 @@
             z-index: 1000;
 
             &:hover {
-                background-color: var(--divider-color);
+                background-color: rgba(0,0,0,.02);
                 color: var(--primary);
                 border-radius: 2px;
             }
@@ -326,7 +326,7 @@
     justify-content: space-between;
 
     .coordinate-value {
-        padding: 0;
+        padding: 0 5px 0 0;
         cursor: pointer;
         display: flex;
         align-items: center;
@@ -336,6 +336,8 @@
 
         &:hover {
             color: var(--primary);
+            background-color: rgba(0,0,0,.02);
+            border-radius: 3px;
         }
 
         .icon-location {
@@ -360,6 +362,8 @@
 
         &:hover {
             color: var(--primary);
+            background-color: rgba(0,0,0,.02);
+            border-radius: 3px;
         }
     }
 }
